things-resource-format-selector fix & 그리드에 적용 & version to 0.1.28

--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -27,6 +27,7 @@ Things.ResourceSelectorBehavior = {
   openResourceSelectorByGrid: function(parentGrid, parentGridRowIdx, selectorConfig, modal) {
     var selector = this._createResourceContent(parentGrid, parentGrid, selectorConfig.ownerField, selectorConfig.resourceType, selectorConfig.resourceName, selectorConfig.initialParams, selectorConfig.bindFields);
     selector.parentGridRowIdx = parentGridRowIdx;
+    if(selectorConfig.valueField) selector.valueField = selectorConfig.valueField;
     this._getResourceSelectorDialog().showResourceDialog(selector, modal);
   },
 
