pagination 관련 per-page -> limit으로 변경

--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -43,7 +43,7 @@
 				sort-fields="[[sortFields]]"
 				action-url="[[resourceUrl]]" 
 				page="{{page}}"
-				per-page="[[perPage]]"
+				limit="[[limit]]"
 				param-type="RESOURCE"
 				last-response="{{lastResponse}}">
 			</things-selector-form>
@@ -55,7 +55,7 @@
 				config="[[gridConfig]]"
 				buttons="[[buttons]]"
 				current-page="{{page}}"
-				per-page="{{perPage}}"
+				limit="{{limit}}"
 				data="[[items]]"
 				total-count="[[itemCount]]"
 				fixed-column-count="0"
