--- a/things-selector-content.html
+++ b/things-selector-content.html
@@ -55,7 +55,7 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 				sort-fields="[[sortFields]]"
 				action-url="[[menuInfo.resource_url]]" 
 				page="{{page}}"
-				per-page="[[perPage]]"
+				limit="[[limit]]"
 				last-response="{{lastResponse}}">
 			</things-selector-form>
 
@@ -66,7 +66,7 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 				config="[[gridConfig]]"
 				buttons="[[buttons]]"
 				current-page="{{page}}"
-				per-page="{{perPage}}"
+				limit="{{limit}}"
 				data="[[items]]"
 				total-count="[[itemCount]]">
 			</things-resource-grid>
