--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -43,7 +43,7 @@
 				sort-fields="[[sortFields]]"
 				action-url="[[menuInfo.resource_url]]" 
 				page="{{page}}"
-				per-page="[[perPage]]"
+				limit="[[limit]]"
 				last-response="{{lastResponse}}">
 			</things-selector-form>
 
@@ -54,7 +54,7 @@
 				config="[[gridConfig]]"
 				buttons="[[buttons]]"
 				current-page="{{page}}"
-				per-page="{{perPage}}"
+				limit="{{limit}}"
 				data="[[items]]"
 				total-count="[[itemCount]]"
 				fixed-column-count="0">
