dialog close 방식 event 방식으로 수정

--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -436,10 +436,7 @@
 			 * Close Resource Selector Dialog
 			 */
 			closeResourceSelectorDialog: function() {
-				var dialog = this.findOwnerDialog(this);
-				if(dialog) {
-					dialog.closeResourceDialog();
-				}
+				this.fire('things-dialog-close');
 			},
 
 			/**
