--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -453,10 +453,7 @@
 			 * Close Resource Selector Dialog
 			 */
 			closeResourceSelectorDialog: function() {
-				var dialog = this.findOwnerDialog(this);
-				if(dialog) {
-					dialog.closeResourceDialog();
-				}
+				this.fire('things-dialog-close');
 			},
 
 			/**
