Fix selector form behavior

--- a/things-resource-format-selector.html
+++ b/things-resource-format-selector.html
@@ -176,9 +176,7 @@
        * 값을 리셋
        */
       clearValue: function() {
-        var obj = {};
-        obj[this.valueField] = null;
-        this.objValue = obj;
+        this.objValue = null;
       }
     });
   </script>
