element에 things-resource-format-selector 추가

--- a/elements.html
+++ b/elements.html
@@ -2,6 +2,7 @@
 <link rel="import" href="things-resource-field.html">
 <link rel="import" href="things-resource-selector.html">
 <link rel="import" href="things-resource-selector-behavior.html">
+<link rel="import" href="things-resource-format-selector.html">
 <link rel="import" href="things-selector-content.html">
 <link rel="import" href="things-selector-content-by-menu.html">
 <link rel="import" href="things-selector-content-by-entity.html">
