--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -292,10 +292,7 @@
 						if(!varData && varRealName.indexOf('_id') > 0) {
 							varRealName = varRealName.substr(0, varRealName.lastIndexOf('_id'));
 							varData = ownerData[varRealName] || '';
-							if(varData) {
-								varData = varData.id || '';
-							}
-							
+							if(varData) varData = varData.id || '';
 							searchParams = this.initialParams.replace(varName, varData);
 
 						} else {
@@ -353,59 +350,21 @@
 				var selectedResource = event.detail;
 				var ownerData = this.findOwnerData();
 
+				// resource format selector인 경우 Object 값으로 설정한다.
+				if(this.ownerElement.localName == 'things-resource-format-selector') {
+					this.ownerElement.setObjValue(selectedResource);
+
 				// Container에서 필요한 대표 컬럼 및 선택한 값을 설정한다. 
-				this.ownerElement.resourceIdField = this.getIdField();
-				this.ownerElement.resourceTitleField = this.getTitleField();
-				var idValue = selectedResource[this.getIdField()];
-				var displayValue = selectedResource[this.getTitleField()];
-				this.ownerElement.setResourceValue(idValue, displayValue, selectedResource);
-				this._bindObjectFields(selectedResource, ownerData);
-				this.closeResourceSelectorDialog();
-			},
-
-			/**
-			 * Owner가 Grid인 경우에 데이터 선택시 
-			 *
-			 * @param {Object} event
-			 */
-			_selectRecordByGrid: function(event) {
-				var selectedResource = event.detail;
-
-				// 메뉴에서 설정한 idField와 titleField로 event.detail내의 값을 추출한 뒤 object로 구성하여 그리드의 row 데이터 중에 업데이트 할 필드로 업데이트한다.
-				var parentGrid = this.ownerElement;
-				var idField = this.getIdField();
-				var titleField = this.getTitleField();
-				var row = parentGrid.focusedRow();
-				var dataSet = parentGrid.dataSource();
-
-				if(row && row.dataIndex() >= 0) {
-					var rowObj = row.getRowObject();
-					var objToChange = rowObj[this.ownerField];
-					if(typeof(objToChange) === 'undefined' || objToChange === null) objToChange = {};
-
-					if(typeof(objToChange) == 'object') {
-						objToChange[idField] = selectedResource[idField];
-						objToChange[titleField] = selectedResource[titleField];
-
-					} else if(typeof(objToChange) == 'string') {
-						objToChange = selectedResource[titleField];
-
-					} else if(typeof(objToChange) == 'number') {
-						objToChange = selectedResource[idField];
-					}
-
-					// Grid의 ownerField 데이터 변경 
-					rowObj[this.ownerField] = objToChange;
-					// Bind Fields 정보로 Grid 데이터 변경 
-					this._bindObjectFields(selectedResource, rowObj);
-
-					this.fire('things-resource-selector-selected', { rowObj: rowObj, resource : selectedResource } );
-					dataSet.updateRow(this.parentGridRowIdx, rowObj);
-					// 부모 그리드 Refresh
-					parentGrid.refreshView();
-					// Close Dialog
-					this.closeResourceSelectorDialog();
+				} else {
+					this.ownerElement.resourceIdField = this.getIdField();
+					this.ownerElement.resourceTitleField = this.getTitleField();
+					var idValue = selectedResource[this.getIdField()];
+					var displayValue = selectedResource[this.getTitleField()];
+					this.ownerElement.setResourceValue(idValue, displayValue, selectedResource);
 				}
+
+				this._bindObjectFields(selectedResource, ownerData);
+				this.closeResourceSelectorDialog();				
 			},
 
 			/**
@@ -433,6 +392,76 @@
 			},
 
 			/**
+			 * Owner가 Grid인 경우에 데이터 선택시 
+			 *
+			 * @param {Object} event
+			 */
+			_selectRecordByGrid: function(event) {
+				var selectedResource = event.detail;
+
+				// 메뉴에서 설정한 idField와 titleField로 event.detail내의 값을 추출한 뒤 object로 구성하여 그리드의 row 데이터 중에 업데이트 할 필드로 업데이트한다.
+				var parentGrid = this.ownerElement;
+				var idField = this.getIdField();
+				var titleField = this.getTitleField();
+				var row = parentGrid.focusedRow();
+				var dataSet = parentGrid.dataSource();
+
+				if(row && row.dataIndex() >= 0) {
+					var rowObj = row.getRowObject();
+					var objToChange = rowObj[this.ownerField];
+
+					if(this.valueField) {
+						objToChange = this._getSingleValueOfSelectedRecord(selectedResource, this.valueField);
+					} else {
+						objToChange = this._getResourceValueOfSelectedRecord(selectedResource, objToChange, idField, titleField);
+					}
+
+					// Grid의 ownerField 데이터 변경 
+					rowObj[this.ownerField] = objToChange;
+
+					// Bind Fields 정보로 Grid 데이터 변경 
+					this._bindObjectFields(selectedResource, rowObj);
+					this.fire('things-resource-selector-selected', { rowObj: rowObj, resource : selectedResource } );
+
+					// 부모 그리드 Refresh
+					dataSet.updateRow(this.parentGridRowIdx, rowObj);
+					parentGrid.refreshView();
+
+					// Close Dialog
+					this.closeResourceSelectorDialog();
+				}
+			},
+
+			/**
+			 * 사용자가 선택한 레코드에서 Resource Value (Object)를 리턴 
+			 */
+			_getResourceValueOfSelectedRecord: function(selectedResource, objToChange, idField, titleField) {
+					if(typeof(objToChange) === 'undefined' || objToChange === null) {
+						objToChange = {};
+					}
+
+					if(typeof(objToChange) == 'object') {
+						objToChange[idField] = selectedResource[idField];
+						objToChange[titleField] = selectedResource[titleField];
+
+					} else if(typeof(objToChange) == 'string') {
+						objToChange = selectedResource[titleField];
+
+					} else if(typeof(objToChange) == 'number') {
+						objToChange = selectedResource[idField];
+					}
+
+					return objToChange;
+			},
+
+			/**
+			 * 사용자가 선택한 레코드 중에 valueField에 해당하는 값을 리턴 
+			 */
+			_getSingleValueOfSelectedRecord: function(selectedResource, valueField) {
+				return selectedResource[valueField];
+			},
+
+			/**
 			 * Close Resource Selector Dialog
 			 */
 			closeResourceSelectorDialog: function() {
@@ -453,7 +482,6 @@
 					}
 				}
 			}
-
 		});
 	</script>
 </dom-module>
