--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -15,7 +15,12 @@ window.Things = window.Things || {};
  * @demo demo/index.html
  */
 Things.ResourceSelectorBehavior = {
-
+  properties:{
+    tabindex: {
+      type: String,
+      value: "-1"
+    }
+  },
   /**
    * Open resource selector - 그리드 컬럼에서 사용 
    *
