--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -48,7 +48,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
   <template>
     <input id="id-value-field" is="iron-input" name="[[submitName]]" bind-value="[[idValue]]" hidden>
     <label>[[label]]</label>
-    <input is="iron-input" value="[[displayValue]]" readonly>
+    <input is="iron-input" value="[[displayValue]]" readonly tabindex="[[tabindex]]">
     <paper-icon-button suffix on-tap="clearValue" icon="clear" alt="clear" title="clear" hidden="[[readOnly]]">
     </paper-icon-button>
     <iron-icon prefix on-tap="openResourceSelector" hidden="[[readOnly]]"></iron-icon>
