--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -16,7 +16,7 @@ window.Things = window.Things || {};
  */
 Things.ResourceSelectorBehavior = {
   properties:{
-    tabindex: {
+    tabIndex: {
       type: String,
       value: "-1"
     }
