--- a/elements.html
+++ b/elements.html
@@ -3,6 +3,7 @@
 <link rel="import" href="things-resource-selector.html">
 <link rel="import" href="things-resource-selector-behavior.html">
 <link rel="import" href="things-resource-format-selector.html">
+<link rel="import" href="things-reference-query.html">
 <link rel="import" href="things-selector-content.html">
 <link rel="import" href="things-selector-content-by-menu.html">
 <link rel="import" href="things-selector-content-by-entity.html">
