dialog scroll 수정

--- a/things-resource-dialog.html
+++ b/things-resource-dialog.html
@@ -85,36 +85,36 @@ ResourceSelector를 위한 다이얼로그.
 			@apply(--layout-flex);
 			@apply(--layout-vertical);
 		}
-    .large {
-      position: fixed;
-      top: 10%;
-      bottom: 10%;
-      left: 15%;
-      right: 15%;
-      margin: 0px;
-      @apply(--layout-flex);
-      @apply(--layout-vertical);
-    }
-    .medium {
-      position: fixed;
-      top: 20%;
-      bottom: 20%;
-      left: 25%;
-      right: 25%;
-      margin: 0px;
-      @apply(--layout-flex);
-      @apply(--layout-vertical);
-    }
-    .small {
-      position: fixed;
-      top: 30%;
-      bottom: 30%;
-      left: 35%;
-      right: 35%;
-      margin: 0px;
-      @apply(--layout-flex);
-      @apply(--layout-vertical);
-    }
+		.large {
+			position: fixed;
+			top: 10%;
+			bottom: 10%;
+			left: 15%;
+			right: 15%;
+			margin: 0px;
+			@apply(--layout-flex);
+			@apply(--layout-vertical);
+		}
+		.medium {
+			position: fixed;
+			top: 20%;
+			bottom: 20%;
+			left: 25%;
+			right: 25%;
+			margin: 0px;
+			@apply(--layout-flex);
+			@apply(--layout-vertical);
+		}
+		.small {
+			position: fixed;
+			top: 30%;
+			bottom: 30%;
+			left: 35%;
+			right: 35%;
+			margin: 0px;
+			@apply(--layout-flex);
+			@apply(--layout-vertical);
+		}
 		.buttonsGroup {
 			@apply(--layout-horizontal);
 			@apply(--layout-end-justified);
@@ -125,6 +125,7 @@ ResourceSelector를 위한 다이얼로그.
 			@apply(--layout-vertical);
 			@apply(--things-padding-clear);
 			@apply(--things-margin-clear);
+			overflow: auto;
 		}
 		.scrollroot::content #detail-view {
 			@apply(--layout-flex);
