--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -46,9 +46,17 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
   </style>
 
   <template>
-    <input id="id-value-field" is="iron-input" name="[[submitName]]" bind-value="[[idValue]]" hidden>
+    <input id="id-value-field" is="iron-input" name="[[submitName]]" hidden>
     <label>[[label]]</label>
-    <input is="iron-input" value="[[displayValue]]" readonly tabindex="[[tabIndex]]">
+    <input is="iron-input"
+            id="input" 
+            value="[[displayValue]]" 
+            readonly 
+            tabindex="[[tabIndex]]" 
+            bind-value="[[idValue]]"
+            error-message$="[[errorMessage]]"
+            auto-validate$="[[autoValidate]]" 
+            required$="[[required]]">
     <paper-icon-button suffix on-tap="clearValue" icon="clear" alt="clear" title="clear" hidden="[[readOnly]]">
     </paper-icon-button>
     <iron-icon prefix on-tap="openResourceSelector" hidden="[[readOnly]]"></iron-icon>
@@ -163,6 +171,34 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         readOnly: {
           type: Boolean,
           value: false
+        },
+        /**
+         * input field에 반드시 값이 포함되어야 함을 결정 합니다.
+         */
+        required: {
+          type: Boolean,
+          value: false
+        },
+        /**
+         * 자동 validation check 활성화 여부
+         */
+        autoValidate: {
+          type: Boolean,
+          value: false
+        },
+        /**
+         * validate 함수를 통해 return 되는 값으로 초기화 하는 변수
+         */
+        isValid: {
+          type: Boolean,
+          value: true
+        },
+        /**
+         * validation check를 통해 isValid의 값이 false일때 화면에 나타나는 errorMessage
+         */
+        errorMessage: {
+          type: String,
+          value: 'Invalid input'
         }
       },
 
@@ -183,6 +219,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
           this.idValue = null;
           this.displayValue = '';
         }
+        this.validate();
       },
 
       /**
@@ -194,6 +231,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
       setResourceValue: function(idValue, displayValue) {
         this.idValue = idValue;
         this.displayValue = displayValue;
+        this.validate();
       },
 
       /**
@@ -236,7 +274,6 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
           }
         }
       },
-
       /**
        * 값을 리셋
        */
@@ -245,8 +282,13 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         obj[this.resourceIdField] = '0';
         obj[this.resourceTitleField] = null;
         this.value = obj;
+      },
+      /**
+       * 수동 validation check function
+       */
+      validate: function() {
+        this.isValid = this.$.input.validate();
       }
-
     });
   </script>
 </dom-module>
