Fix - Resource Selector 검색 폼

--- a/things-selector-form.html
+++ b/things-selector-form.html
@@ -34,7 +34,7 @@
       last-response="{{formFields}}">
     </things-ajax>
 
-    <things-search-form 
+    <things-selector-form 
       id="search-form"
       class="flex"
       title="Sample Title"
@@ -43,7 +43,7 @@
       page="{{page}}"
       limit="{{limit}}"
       last-response="{{lastResponse}}">
-    </things-search-form>
+    </things-selector-form>
 
 @demo demo/demo-things-search-form.html
 -->
@@ -69,16 +69,14 @@
     </style>
 
     <paper-material elevation="0" class="flex" on-keypress="handleKeyPress">
-      <div class="layout vertical flex">
-        <form is="iron-form"
-              action="[[action]]"
-              content-type="[[contentType]]"
-              last-response ="{{lastResponse}}"
-              with-credentials="[[withCredentials]]">
-          <div id="fields" class="layout vertical flex"></div>
-          <paper-fab icon="search" title="search" on-tap="_onSearchFormTap"></paper-fab>
-        </form>
-      </div>
+      <form is="iron-form"
+            action="[[action]]"
+            content-type="[[contentType]]"
+            last-response ="{{lastResponse}}"
+            with-credentials="[[withCredentials]]">
+        <div id="fields" class="layout vertical flex"></div>
+        <paper-fab icon="search" title="search" on-tap="_onSearchFormTap"></paper-fab>
+      </form>
     </paper-material>
   </template>
 
@@ -116,31 +114,68 @@
 
         for(index in this.formFields) {
           var field = this.formFields[index];
+          if(field.type == 'hidden') continue;
+
           field.searchForm = true;
           var newElement = this._createFormElement(field);
           if(!newElement) continue;
 
-          if((index % 2) == 0) {
-            rowDiv = document.createElement('div');
-            rowDiv.setAttribute('class', 'layout horizontal');
-            divContainer.appendChild(rowDiv);
-          }
+          if(field.type == 'date-from-to-picker') {
+            // 1. 이전 div가 1개이고 date-from-to 가 아니면 empty 열 추가
+            if(rowDiv && rowDiv.childNodes && (rowDiv.childNodes.length % 2 != 0) && rowDiv.childNodes[0].localName.indexOf('things-date-from-to') < 0) {
+              rowDiv.appendChild(this._createFormElement({ type: 'empty' }));
+            }
 
-          rowDiv.appendChild(newElement);          
+            rowDiv = this._createElementContainer(divContainer, newElement);
+
+          } else {
+            if(rowDiv == null || !rowDiv.childNodes || (rowDiv.childNodes.length % 2 == 0)) {
+              rowDiv = this._createElementContainer(divContainer, newElement);
+            } else {
+              // rowDiv의 마지막 엘리먼트가 textarea 이면 rowDiv에 empty 엘리먼트 추가
+              if(rowDiv.childNodes[0].localName.indexOf('things-date-from-to') >= 0) {
+                rowDiv = this._createElementContainer(divContainer, newElement);
+              } else {
+                rowDiv.appendChild(newElement);
+              }
+            }
+          }
         }
 
         // 마지막 Div가 홀수이고 textarea가 아니면 empty 열 추가
         if(rowDiv && rowDiv.childNodes && rowDiv.childNodes.length == 1) {
-          if(rowDiv.childNodes[0].localName.indexOf('textarea') < 0) {
+          if(rowDiv.childNodes[0].localName.indexOf('textarea') < 0 && rowDiv.childNodes[0].localName.indexOf('things-date-from-to') < 0) {
             var emptyElement = this._createFormElement({ type: 'empty' });
             rowDiv.appendChild(emptyElement);
           }
+        }
+
+        for(index in this.formFields) {
+          var field = this.formFields[index];
+          if(field.type != 'hidden') continue;
+          var newElement = this._createFormElement(field);
+          rowDiv = this._createElementContainer(divContainer, newElement);
+          rowDiv.hidden = true;
         }
 
         this.active = true;
         this.fire('things-search-form-configured', this.formFields);
       },
 
+      /**
+       * Container element를 생성한 후 childElement를 추가한 후 divContainer에 추가한다.
+       *
+       * @param {Object} divContainer
+       * @param {Object} childElement
+       */
+      _createElementContainer: function(divContainer, childElement) {
+        rowDiv = document.createElement('div');
+        rowDiv.setAttribute('class', 'layout horizontal');
+        if(childElement) rowDiv.appendChild(childElement);
+        divContainer.appendChild(rowDiv);
+        return rowDiv;
+      },
+      
       /**
        * 모든 Form Element를 리턴 
        */
@@ -182,7 +217,7 @@
        */
       _onSearchFormTap: function(e) {
         if(this.page > 1) this.page = 1;
-        else this.submitMyForm();      
+        else this.submitMyForm();
       },
 
       /**
