style fix & version to 0.1.57'

--- a/things-reference-query.html
+++ b/things-reference-query.html
@@ -11,7 +11,10 @@
     }
     input {
       @apply(--things-input);
-      width:calc(65% - 37px);
+      width:65%;
+    }
+    input:focus{
+      outline:none;
     }
   </style>
   
