ResourceSelector에 버튼이 포함되지 않도록 수정

--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -52,7 +52,7 @@
 				model="[[gridModel]]" 
 				columns="[[gridColumns]]"
 				config="[[gridConfig]]"
-				buttons="[[buttons]]"
+				buttons="[[screenButtons]]"
 				current-page="{{page}}"
 				limit="{{limit}}"
 				data="[[items]]"
@@ -81,7 +81,7 @@
 				/**
 				 * 버튼  
 				 */
-				buttons: {
+				screenButtons: {
 					type: Array,
 					value: []
 				},
